AGIC_구성/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: aks.daisyapp.net  # 여기에 호스트 이름을 지정
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server  # 서비스 이름
            port:
              number: 80  # 서비스 포트
